[project]
name = "moderation-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.116.1",
    "langchain-ollama==0.3.7",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.13.0", "memory-profiler==0.61.0"]
